# nestdaq-user-impl

./: .gitignore  AmQStrTdcData.h  AmQStrTdcDqm.cxx  AmQStrTdcDqm.h  AmQStrTdcDqmScr.cxx  AmQStrTdcDqmScr.h  AmQStrTdcSampler.cxx  AmQStrTdcSampler.h  CMakeLists.txt  DataStore.h  Digitizer.cxx  Digitizer.h  DigitizerConfig.cxx  DigitizerConfig.h  DigitizerFunc.cxx  DigitizerFunc.h  DigitizerSampler.cxx  DigitizerSampler.h  DigitizerStruct.cxx  DigitizerStruct.h  EDM4eicSink.cxx  EDM4eicSink.h  EDM4hepSink.cxx  EDM4hepSink.h  EventBuilder.cxx  EventBuilder.h  FileSink.cxx  FileSink.h  FileSinkHeader.h  FileSinkHeaderBlock.h  FileSinkTrailer.h  FilterHeader.h  FilterTimeFrameSliceABC.cxx  FilterTimeFrameSliceABC.h  FilterTimeFrameSliceABC.icxx  FilterTimeFrameSliceByMultiplicity.cxx  FilterTimeFrameSliceByMultiplicity.h  FilterTimeFrameSliceBySomething.cxx  FilterTimeFrameSliceBySomething.h  FilterTimeFrameSliceByTOF.cxx  (+65 more)
digitizer/: CMakeLists.txt  X742CorrectionRoutines.c  X742CorrectionRoutines.h  fft.h  flash.h  flash_opcodes.h  spi.h
docs/: dataformat_gr202303.md  dataformat_hd202306.md
emulator/: AmQLRTdcData.cxx  AmQLRTdcData.h  AmQTdc.cxx  AmQTdc.h  AmQTdcData.h  CMakeLists.txt  Emulator.cxx
script/: mq-param-amq.sh  mq-param-emul.sh  topology-amq-stb.sh
sqlite/: CMakeLists.txt
utility/: BitDump.cc  BitDump.hh  CMakeLists.txt  CompressHelper.h  Compressor.h  DebugFlags.h  DecompressHelper.h  Decompressor.h  FileUtil.cxx  FileUtil.h  GrayCode.h  HexDump.h  MessageUtil.h  Reporter.cxx  Reporter.h  RingBuffer.h  Stoi.cxx  Stoi.h  TaskProcessorMT.cxx  TaskProcessorMT.h  Timer.cxx  Timer.h  ToString.h  UDPRBCP.cc  UDPRBCP.hh  Uncopyable.hh  ecc.h  enum_bitset.h  filesystem.h  is_vector.h  mcs_parser.cxx  mcs_parser.h  network.hh  network_to_host.h  program_options.cxx  program_options.h  rbcp.h  scope_guard.h  string_to_container.h  to_signed.h
